@@ -3023,10 +3023,32 @@ div[class*=' pa-'] {
 .pp-formidable-forms-button-full-width .pp-formidable-forms .frm_submit .frm_button_submit {
   width: 100%; }
 
+.pp-fluent-forms .ff-el-group .ff-el-input--label {
+  display: none; }
+
+.pp-fluent-forms-labels-yes .pp-fluent-forms .ff-el-input--label {
+  display: block; }
+
 .pp-fluent-forms-form-button-full-width .ff_submit_btn_wrapper .ff-btn-submit {
   margin-right: 0;
   margin-left: 0;
   width: 100%; }
+
+.pp-custom-radio-checkbox .ff-el-group .ff-el-form-check {
+  margin-bottom: 8px; }
+  .pp-custom-radio-checkbox .ff-el-group .ff-el-form-check label.ff-el-form-check-label {
+    margin-bottom: 0; }
+
+.pp-custom-radio-checkbox .ff-el-group input[type="checkbox"],
+.pp-custom-radio-checkbox .ff-el-group input[type="radio"] {
+  border-style: solid;
+  border-width: 0;
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 5px;
+  padding: 3px;
+  top: -1px;
+  -webkit-appearance: none; }
 
 .pp-post .pp-post-title {
   font-size: 26px; }
